wrangler toml files, trying to get site up

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "hono": "^4.7.1",
     "pg": "^8.13.1",
     "puppeteer": "^24.2.1",
     "tailwindcss": "^4.0.6"
